enhanced-form.htm

--- a/enhanced-form.htm
+++ b/enhanced-form.htm
@@ -183,7 +183,7 @@
                 <h3>See how our delivery wokers arerespect full and active</h3>
                 <video src="examplevideo.mp4" controls>a video of our workers giving package to customers</video>
                 <p>here is also a record of our customer service</p>
-                <audio src="exampleaudio.mp3">audio recorded from the customer service</audio>
+                <audio src="exampleaudio.mp3" controls>audio recorded from the customer service</audio>
             </section>
             <section>
                 <h4>to order fill the following form</h4>
